TestSuite/PascalABCTests/errors/err0282.pas
type TClass = static class
end;

procedure p(i: TClass);
begin
  
end;

begin
end.